Load webview scripts async

--- a/src/vs/workbench/contrib/webview/electron-browser/pre/index.html
+++ b/src/vs/workbench/contrib/webview/electron-browser/pre/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden; width: 100%; height: 100%" role="document">
-	<script type="module">
+	<script async type="module">
 		import { createWebviewManager } from './main.js';
 
 		createWebviewManager({
