--- a/src/vs/code/browser/workbench/workbench-web-dev.html
+++ b/src/vs/code/browser/workbench/workbench-web-dev.html
@@ -72,8 +72,10 @@
 
 </script>
 
-<script src="{{WORKBENCH_WEB_BASE_URL}}/out/vs/workbench/workbench.web.api.nls.js"></script>
-<script src="{{WORKBENCH_WEB_BASE_URL}}/out/vs/workbench/workbench.web.api.js"></script>
-<script src="{{WORKBENCH_WEB_BASE_URL}}/out/vs/code/browser/workbench/workbench.js"></script>
+<script>
+	const workbench = document.createElement('script');
+	workbench.innerText = "require(['vs/code/browser/workbench/workbench'], function() {});";
+	document.body.appendChild(workbench);
+</script>
 
 </html>
